--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <button type="submit">Отправить</button>
   </form>
 
-  <script src="script.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
